# armory

./: Makefile  README.md  SECURITY.md  VERSION.txt  docker-compose.yml  environment.yml  pyproject.toml  scenarios.py  setup.py
.github/: README.md
.github/actions/ci_environment_setup/: action.yml
.github/actions/evaluations/setup_environment/: action.yml
.github/actions/evaluations_environment_setup/: action.yml
.github/actions/workflow_setup/: action.yml
.github/docs/: ISSUE-TRIAGE.md
.github/workflows/: 1-scan-lint-build.yml  3-test-docker.yml  ci_test.yml  end2end_cron.yml  release.yml  scenario-evaluation-workflow.yml  scenario-runner.yml
.github/workflows/tests/: scenario-evaluation-config.json
armory/: __about__.py  __init__.py  __main__.py  hydra.conf  paths.py  version.py
armory/cli/: __init__.py  command.py  dispatcher.py  docker.py  ephemeral.py  run.py
armory/docker/: __init__.py  images.py  management.py
armory/eval/: evaluator.py
armory/plugins/cli/: __init__.py  __main__.py  configure.py  docker.py  download.py  ephemeral.py  exec.py  launch.py  run.py
armory/plugins/containers/: __init__.py
armory/plugins/docker/: images.py  runtime.py
armory/plugins/jupyter/: README.md
armory/scenarios/: __init__.py  config.py  evaluator.py  executor.py  main.py  scenario-config.yaml  scenario.py
armory/utils/: config_loading.py  configuration.py  debugging.py  paths.py  singleton.py  version.py
configs/: README.md  hydra.yaml
configs/scenarios/: poisoning_cifar10_witches_brew.yaml
configs/scenarios/eval1-4/poisoning/: resisc10_poison_dlbd.yaml
configs/scenarios/eval5/poisoning/: cifar10_poison_dlbd.yaml
data/: environment.yml
docker/: Datasets-Dockerfile  Dockerfile  Dockerfile-base  Dockerfile-dev  Dockerfile-fortress  Dockerfile-pytorch  Dockerfile.base  README.md  build.py  pytorch-enviroment.yml
docker-test/: .dockerignore  Dockerfile  Dockerfile-Client  Dockerfile-GPU  docker-compose.yml  docker.sh
docker-test/client-resources/: jupyter_notebook_config.py
docker-test/client-resources/app/: 00-Client-Server-Communication-Example.ipynb  1-Getting-Started.ipynb  10-CIFAR-10-Baseline-Scenario.ipynb  99-Running_Armory_Scenarios_Interactively.ipynb
docker-test/resources/: env.sh  environment.yml
docker-test/server-resources/: api-gateway.py
docs/developers/: container-runtimes.md
notebooks/: mlflow_integration.ipynb
profile/: armory-jupyter.sh  config.yml  docker-compose.yml
profile/data/: config.json
profile/data/certs/: keystore.p12
profile/tmp/: docker.management.patch  entrypoint.sh
scenarios/: README.md
scenarios/10-persistence/: poisoning-cifar10-resnet18-pytorch.json  poisoning-gtsrb-micronnet-filtering_defence-keras.json
scenarios/1000-evaluations/eval5/: add-eval.py
scenarios/1000-evaluations/eval5/asr_librispeech/: asr_librispeech-defended_targeted_snr_pgd.json
scenarios/1000-evaluations/eval5/carla_object_detection/: carla_obj_det_multimodal_dpatch_defended.json
scenarios/1000-evaluations/eval5/carla_video_tracking/: carla_video_tracking_goturn_advtextures_defended.json
scenarios/500-defenses/: defense-cifar10-resnet18-dlbd-watermark_perfect_filter-pytorch.json  defense-cifar10-resnet18-dlbd-watermark_undefended.json  defense-cifar10-resnet18-poisoning-witches_brew-perfect_filter-pytorch.json  defense-cifar10-resnet18-poisoning-witches_brew-spectral_signature_defense-pytorch.json  defense-cifar10-resnet18-poisoning-witches_brew-undefended-pytorch.json  defense-gtsrb-micronnet-clbd-bullet_holes_perfect_filter-keras.json  defense-gtsrb-micronnet-clbd-bullet_holes_random_filter-keras.json  defense-gtsrb-micronnet-clbd-bullet_holes_undefended-keras.json  defense-gtsrb-micronnet-clbd-peace_sign_random_filter-keras.json  defense-gtsrb-micronnet-clbd-peace_sign_spectral_signature_defense-keras.json  defense-gtsrb-micronnet-clbd-peace_sign_undefended-keras.json  defense-gtsrb-micronnet-dlbd-bullet_holes_random_filter-pytorch.json  defense-gtsrb-micronnet-dlbd-bullet_holes_spectral_signature_defense-pytorch.json  defense-gtsrb-micronnet-dlbd-peace_sign_activation_defense-pytorch.json  defense-gtsrb-micronnet-dlbd-peace_sign_spectral_signature_defense.json  defense-gtsrb-micronnet-dlbd-peace_sign_undefended-pytorch.json  defense-gtsrb-micronnet-witches_brew-activation_defense.json  defense-gtsrb-micronnet-witches_brew-random_filter.json  defense-gtsrb-micronnet-witches_brew-spectral_signature_defense.json
scenarios/60-persistence/: poisoning-cifar10-resnet18-witches_brew-pytorch.json  poisoning-gtsrb-micronnet-bullet_hole-keras.json  poisoning-gtsrb-micronnet-keras.json  poisoning-gtsrb-micronnet-pattern-keras.json  poisoning-gtsrb-micronnet-pytorch.json  poisoning-gtsrb-micronnet-witches_brew-pytorch.json  poisoning-resisc10-resnet18-pytorch.json
scenarios/60-persistence/poisoning-1-4/: gtsrb_scenario_clbd.json  gtsrb_scenario_clbd_bullethole.json
scenarios/scenario_configs/eval5/: add-eval.py
scenarios/scenario_configs/eval5/asr_librispeech/: defended_untargeted_snr_pgd.json  targeted_snr_pgd.json
scenarios/scenario_configs/eval5/carla_object_detection/: carla_obj_det_adversarialpatch_undefended.json  carla_obj_det_dpatch_undefended.json  carla_obj_det_multimodal_adversarialpatch_defended.json  carla_obj_det_multimodal_adversarialpatch_undefended.json
scenarios/scenario_configs/eval5/carla_video_tracking/: carla_video_tracking_goturn_advtextures_undefended.json
tests/: conftest.py
tests/end_to_end/: test_scenario_runner.py
tools/: conda-environment.yml  enviroments.yml  generate_enviroments.py  huggingface2tfds.sh  install.sh  pre-commit.sh  requirements.txt  src.build.sh
tools/datasets/: entrypoint.sh
tools/enviroments/: pytorch-enviroment.yml
tools/hacking/: README.md
tools/hooks/: hook.py  plugin.py
tools/requirements/: armory-base-requirements.txt  host-requirements.txt
tools/templates/: base-requirements.template  conda-environment.template.yml  minimal-requirements.template  requirement.yml  requirements.py
(+52 files in other folders)
